...
                    unselectedLabelColor: Colors.black.withOpacity(0.6),
                    labelStyle: const TextStyle(
                        fontFamily: 'inter', fontWeight: FontWeight.w500),
                    indicatorColor: Colors.black,
                    tabs: const [
                      Tab(
                        text: 'Ingredients',
                      ),
                      Tab(
                        text: 'Nutriments',
                      ),
                    ],
                  ),
                ),
                // IndexedStack based on TabBar index
                IndexedStack(
...
