...

    _pages = [
      {
        'page': DashBoard(
          testMode: widget.testMode,
        ),
        'title': 'Dashboard',
      },
      {
        'page': RecipesScreen(
          testMode: widget.testMode,
        ),
        'title': 'Recipes',
...
