...
    try {
      await widget.auth.resetPassword(emailController.text);
      ScaffoldMessenger.of(context).showSnackBar(SnackBar(
          content: const Text(
              "Please Follow Instructions sent by email to reset your password"),
          action: SnackBarAction(
            label: "Login",
            onPressed: (() {
              Navigator.pushReplacement(context,
                  MaterialPageRoute(builder: (context) => const LoginScreen()));
            }),
          )));
      emailSent = true;
...
